Added modal for adding new stores - Sathya

--- a/stores/store_home.html
+++ b/stores/store_home.html
@@ -673,6 +673,59 @@
     </div>
     </div>
 
+    <div class="modal fade Grofoo-home" id="add_stores" tabindex="-1" role="dialog" aria-labelledby="myModalLabel2">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+
+                <ul class="tasks-bar" >
+                    <div class="search-box">
+                        <h3 class="header">Add Request 
+                            <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span
+                                    aria-hidden="true">&times;</span></button>
+                        </h3>
+                        <div class="profile-form" id="s_r_f_content">
+                            <div class="form-group">
+                                <label for="">Name</label>
+                                <input type="text" class="form-control" placeholder="Name" >
+                            </div>
+                            <div class="form-group">
+                                <label for="">Mobile Number</label>
+                                <input type="text" class="form-control" placeholder="Number" >
+                            </div>
+                            <div class="form-group">
+                                <label for="">Email</label>
+                                <input type="text" class="form-control" placeholder="Email" >
+                            </div>
+                            <div class="form-group">
+                                <label for="">Address</label>
+                                <textarea type="text" rows="3" class="form-control" placeholder="Address" ></textarea>
+                            </div>
+                            <div class="">
+                                <label class="custom-control custom-checkbox">
+                                    <input type="checkbox" class="custom-control-input">
+                                    <span class="custom-control-indicator"></span>
+                                    <span class="custom-control-description notify-text">I certify that the information I am about to provided is true and complete to the best of my knowledge.</span>
+                                </label>
+                            </div>
+                        </div>
+
+                        <div class="s_r_f_sucess_msg_box" id="s_r_f_sucess_msg_box">
+                            <div class="s_r_f_sucess_content">
+                                    <img src="../assets/images/header_logo.png" class="srf_logo_img">
+                                    <h2 class="successfully_title"> Submitted Successfully</h2>
+                                    <span>Your form has been received and is being processed. You should receive a confirmation email. </span>  
+                            </div>
+                        </div>
+                    </div>
+                </ul>
+                <div class="modal-footer">
+                    <button class="btn s_r_f_add_now" id="id_add_now">Submit</button>
+                  </div>
+            </div>
+           
+        </div><!-- modal-content -->
+    </div><!-- modal-dialog -->
+
     <script type="text/javascript" src="../assets/js/jquery-2.1.1.js"></script>
     <script type="text/javascript" src="../assets/js/jquery.validate.min.js"></script>
     <script type="text/javascript" src="../assets/js/bootstrap.min.js"></script>
