UI CHANGES -VIGNESH

--- a/stores/register.html
+++ b/stores/register.html
@@ -25,7 +25,7 @@
     <div class="wrapper dashboard Grofoo-home">
         <nav class="navbar navbar-default navbar-fixed-top">
             <div class="container">
-                <div class="navbar-header page-scroll">
+                <div class="navbar-header page-scroll get-loc-menu">
                      <button type="button" class="navbar-toggle" data-toggle="collapse"
                         data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
                         <span class="sr-only">Toggle navigation</span>
@@ -56,7 +56,7 @@
                 </div>
                 <div class="collapse navbar-collapse navbar-right" id="bs-example-navbar-collapse-1">
                     <ul class="nav navbar-nav ">
-                        <li class="dropdown  notify">
+                        <!-- <li class="dropdown  notify">
                             <a href="#" class="dropdown-toggle" data-toggle="dropdown">
                                 <span class="notify-row">
                                     <span class="bell ">
@@ -110,7 +110,7 @@
                             <a class="btn btn-nav-line page-scroll " href="login.html"> <i
                                 class="ion-ios-contact-outline"></i> Sign
                             In </a>
-                        </li>
+                        </li> -->
                     </ul>
                 </div>
             </div>
@@ -120,8 +120,8 @@
 
             <div class="login_bg">
                 <div class="container">
-                    <div class="row">
-                        <div class="col-sm-6 col-sm-offset-3 login">
+                    <div class="row login-head-align">
+                        <div class="col-sm-12 login">
                             <div class="col-sm-12 text-center login_form">
                                 <p class="l_f_title">Already Registered on indexfing?</p>
                                 <p class="wow fadeInDown l_f_subtext nomargin" data-wow-delay="0.2s">It only takes a minute to register with indexfing.</p>
@@ -140,7 +140,7 @@
                                     </a>
 
                                     <span class="l_f_or">or</span>
-                                    <div class="f_password text-center">
+                                    <div class="f_createacc text-center">
                                         <span class="new_user_link">Have an account? </span> <a href="login.html">Back to login</a>
                                      </div>
                                 </div>
