--- a/stores/login.html
+++ b/stores/login.html
@@ -17,6 +17,7 @@
     <link rel="stylesheet" href="../assets/css/magnific-popup.css">
     <link rel="stylesheet" href="../assets/css/ionicons.min.css">
     <link href="../assets/css/style.css" rel="stylesheet" type="text/css" media="all" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
 </head>
 
@@ -25,7 +26,7 @@
     <div class="wrapper dashboard Grofoo-home">
         <nav class="navbar navbar-default navbar-fixed-top">
             <div class="container">
-                <div class="navbar-header page-scroll">
+                <div class="navbar-header page-scroll get-loc-menu">
                      <button type="button" class="navbar-toggle" data-toggle="collapse"
                         data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
                         <span class="sr-only">Toggle navigation</span>
@@ -56,7 +57,7 @@
                 </div>
                 <div class="collapse navbar-collapse navbar-right" id="bs-example-navbar-collapse-1">
                     <ul class="nav navbar-nav ">
-                        <li class="dropdown  notify">
+                        <!-- <li class="dropdown  notify">
                             <a href="#" class="dropdown-toggle" data-toggle="dropdown">
                                 <span class="notify-row">
                                     <span class="bell ">
@@ -110,7 +111,7 @@
                             <a class="btn btn-nav-line page-scroll " href="login.html"> <i
                                 class="ion-ios-contact-outline"></i> Sign
                             In </a>
-                        </li>
+                        </li> -->
                     </ul>
                 </div>
             </div>
@@ -120,14 +121,14 @@
 
             <div class="login_bg">
                 <div class="container">
-                    <div class="row">
-                        <div class="col-sm-6 col-sm-offset-3 login">
+                    <div class="row login-head-align">
+                        <div class="col-sm-12 login">
 
                             <div class="col-sm-12 text-center login_form">
                                 <p class="l_f_title">First time?</p>
                                 <p class="wow fadeInDown l_f_subtext nomargin" data-wow-delay="0.2s">It only takes a minute to login with Grofoo.</p>
                                 <br>
-                                <div class="f_password text-left">
+                                <div class="f_createacc text-left">
                                    <span class="new_user_link">New User ? </span> <a href="register.html">Create Account </a>
                                 </div>
                                 <br>
@@ -150,16 +151,23 @@
                                     <span class="l_f_or">or</span>
 
                                     <div class="row omb_socialButtons">
-                                        <div class="col-xs-6 col-sm-6">
-                                            <a href="store_home.html" class="btn btn-lg btn-block f-facebook">
+                                        <div class="col-xs-12 col-sm-6 col-md-6">
+                                            <!-- <a href="store_home.html" class="btn btn-lg btn-block f-facebook">
                                                 <i class="ion-social-facebook"></i>
                                                 <span class="">Facebook</span>
+                                            </a> -->
+
+                                            <a href="store_home.html" class="fb-l btn">
+                                              <i class="fa fa-facebook fa-fw"></i> Login with Facebook
                                             </a>
                                         </div>
-                                        <div class="col-xs-6 col-sm-6">
-                                            <a href="store_home.html" class="btn btn-lg btn-block f-google">
+                                        <div class="col-xs-12 col-sm-6 col-md-6">
+                                            <!-- <a href="store_home.html" class="btn btn-lg btn-block f-google">
                                                 <svg viewBox="0 0 1152 1152" style="width:14px;line-height: 14px;margin-top: 2px;vertical-align: top;" focusable="false" aria-hidden="true" role="img" class="spectrum-Icon spectrum-Icon--sizeS SocialButton-Icon"><path d="M1055.994 594.42a559.973 559.973 0 0 0-8.86-99.684h-458.99V683.25h262.28c-11.298 60.918-45.633 112.532-97.248 147.089v122.279h157.501c92.152-84.842 145.317-209.78 145.317-358.198z" fill="#4285f4"></path><path d="M588.144 1070.688c131.583 0 241.9-43.64 322.533-118.07l-157.5-122.28c-43.64 29.241-99.463 46.52-165.033 46.52-126.931 0-234.368-85.728-272.691-200.919H152.636v126.267c80.19 159.273 245 268.482 435.508 268.482z" fill="#34a853"></path><path d="M315.453 675.94a288.113 288.113 0 0 1 0-185.191V364.482H152.636a487.96 487.96 0 0 0 0 437.724z" fill="#fbbc05"></path><path d="M588.144 289.83c71.551 0 135.792 24.589 186.298 72.88l139.78-139.779C829.821 144.291 719.504 96 588.143 96c-190.507 0-355.318 109.21-435.508 268.482L315.453 490.75c38.323-115.19 145.76-200.919 272.691-200.919z" fill="#ea4335"></path></svg>
                                                 <span class="">Google</span>
+                                            </a> -->
+                                            <a href="store_home.html" class="google-l btn"><i class="fa fa-google fa-fw">
+                                              </i> Login with Google+
                                             </a>
                                         </div>
                                     </div>
