ui woks vignesh

--- a/stores/login.html
+++ b/stores/login.html
@@ -158,7 +158,7 @@
                                             </a> -->
 
                                             <a href="store_home.html" class="fb-l btn">
-                                              <i class="fa fa-facebook fa-fw"></i> Login with Facebook
+                                              <i class="fa fa-facebook fa-fw"></i> Facebook
                                             </a>
                                         </div>
                                         <div class="col-xs-12 col-sm-6 col-md-6">
@@ -167,7 +167,7 @@
                                                 <span class="">Google</span>
                                             </a> -->
                                             <a href="store_home.html" class="google-l btn"><i class="fa fa-google fa-fw">
-                                              </i> Login with Google+
+                                              </i> Google
                                             </a>
                                         </div>
                                     </div>
