--- a/stores/store_home.html
+++ b/stores/store_home.html
@@ -328,6 +328,26 @@
                                             <div class="col-xs-12 col-sm-6 col-md-3 ">
                                                 <div class="Store_details_list">
                                                     <div class="s_d_img_box">
+                                                        <!-- <img src="../assets/images/store_img_1.png" class="s_d_img"> -->
+                                                        <p class="cus-logo-text">Saravana stores & Provisions</p>
+                                                        <i class="ion-ios-heart-outline pin-to-save" data-toggle="tooltip" data-placement="bottom" title="Bookmark"></i> 
+                                                    </div>
+                                                    <div class="s_d_content">
+                                                        <a href="https://g.page/GodavariUSA?share" target="_blank" class="link_direction">
+                                                            <i class="ion-ios-location-outline btn_direction"></i>
+                                                        </a>
+                                                        <h2>Saravana stores </h2>
+                                                        <ul>
+                                                            <li><i class="ion-ios-location-outline"></i> <span> Backeystown Pike, Frederick,  </span></li>
+                                                            <li><i class="ion-ios-telephone-outline"></i> <span> Phone No : +91 9225649200 </span></li>
+                                                        </ul>
+                                                        <button class="btn s_d_order_btn" onclick='location.href="search_list_new_grocery_owne.html";'>Order Now</button>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                            <div class="col-xs-12 col-sm-6 col-md-3 ">
+                                                <div class="Store_details_list">
+                                                    <div class="s_d_img_box">
                                                         <img src="../assets/images/restaurants_img_1.png" class="s_d_img">
                                                         <i class="ion-ios-heart-outline pin-to-save" data-toggle="tooltip" data-placement="bottom" title="Bookmark"></i> 
                                                     </div>
@@ -372,6 +392,26 @@
                                             </h1>
                                         </div>
                                         <div class="row  collapse in"role="tabpanel" aria-labelledby="collapsethree" id="collapsethree" >
+                                            <div class="col-xs-12 col-sm-6 col-md-3 ">
+                                                <div class="Store_details_list">
+                                                    <div class="s_d_img_box">
+                                                        <!-- <img src="../assets/images/store_img_1.png" class="s_d_img"> -->
+                                                        <p class="cus-logo-text">Saravana stores & Provisions</p>
+                                                        <i class="ion-ios-heart-outline pin-to-save" data-toggle="tooltip" data-placement="bottom" title="Bookmark"></i> 
+                                                    </div>
+                                                    <div class="s_d_content">
+                                                        <a href="https://g.page/GodavariUSA?share" target="_blank" class="link_direction">
+                                                            <i class="ion-ios-location-outline btn_direction"></i>
+                                                        </a>
+                                                        <h2>Saravana stores </h2>
+                                                        <ul>
+                                                            <li><i class="ion-ios-location-outline"></i> <span> Backeystown Pike, Frederick,  </span></li>
+                                                            <li><i class="ion-ios-telephone-outline"></i> <span> Phone No : +91 9225649200 </span></li>
+                                                        </ul>
+                                                        <button class="btn s_d_order_btn" onclick='location.href="search_list_new_grocery_owne.html";'>Order Now</button>
+                                                    </div>
+                                                </div>
+                                            </div>
                                             <div class="col-xs-12 col-sm-6 col-md-3 ">
                                                 <div class="Store_details_list">
                                                     <div class="s_d_img_box">
