--- a/store_home.html
+++ b/store_home.html
@@ -5,19 +5,19 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <title>Grofoo - Home</title>
-    <link rel="icon" href="../assets/images/favicon.png" type="image/png" sizes="16x16">
+    <link rel="icon" href="assets/images/favicon.png" type="image/png" sizes="16x16">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <meta name="description" content="Grofoo">
 
-    <link href="../assets/css/bootstrap.min.css" rel="stylesheet" type="text/css" media="all" />
+    <link href="assets/css/bootstrap.min.css" rel="stylesheet" type="text/css" media="all" />
     <link href="https://fonts.googleapis.com/css?family=Nunito:400,700%7CRoboto:300,400,500%7CMuli:300,400"
         rel="stylesheet">
-    <link rel="stylesheet" href="../assets/css/animate.css">
-    <link rel="stylesheet" href="../assets/css/owl.carousel.css">
-    <link rel="stylesheet" href="../assets/css/owl.theme.css">
-    <link rel="stylesheet" href="../assets/css/magnific-popup.css">
-    <link rel="stylesheet" href="../assets/css/ionicons.min.css">
-    <link href="../assets/css/style.css" rel="stylesheet" type="text/css" media="all" />
+    <link rel="stylesheet" href="assets/css/animate.css">
+    <link rel="stylesheet" href="assets/css/owl.carousel.css">
+    <link rel="stylesheet" href="assets/css/owl.theme.css">
+    <link rel="stylesheet" href="assets/css/magnific-popup.css">
+    <link rel="stylesheet" href="assets/css/ionicons.min.css">
+    <link href="assets/css/style.css" rel="stylesheet" type="text/css" media="all" />
 
 </head>
 
@@ -53,7 +53,7 @@
                         </div>
                     </li>
                     <a class="navbar-brand" href="index.html">
-                        <img src="../assets/images/header_logo.png" class="logo_c"> </a>
+                        <img src="assets/images/header_logo.png" class="logo_c"> </a>
                 </div>
                 <div class="collapse navbar-collapse " id="bs-example-navbar-collapse-1">
                     <ul class="nav navbar-nav ">
@@ -203,7 +203,7 @@
                                             <div class="col-xs-12 col-sm-6 col-md-3 ">
                                                 <div class="Store_details_list">
                                                     <div class="s_d_img_box">
-                                                        <!-- <img src="../assets/images/store_img_1.png" class="s_d_img"> -->
+                                                        <!-- <img src="assets/images/store_img_1.png" class="s_d_img"> -->
                                                         <p class="cus-logo-text">Saravana stores & Provisions</p>
                                                         <i class="ion-ios-heart-outline pin-to-save" data-toggle="tooltip" data-placement="bottom" title="Bookmark"></i> 
                                                     </div>
@@ -223,7 +223,7 @@
                                             <div class="col-xs-12 col-sm-6 col-md-3 ">
                                                 <div class="Store_details_list">
                                                     <div class="s_d_img_box">
-                                                        <img src="../assets/images/store_img_1.png" class="s_d_img">
+                                                        <img src="assets/images/store_img_1.png" class="s_d_img">
                                                         <i class="ion-ios-heart-outline pin-to-save" data-toggle="tooltip" data-placement="bottom" title="Bookmark"></i> 
                                                     </div>
                                                     <div class="s_d_content">
@@ -242,7 +242,7 @@
                                             <div class="col-xs-12 col-sm-6 col-md-3 ">
                                                 <div class="Store_details_list">
                                                     <div class="s_d_img_box">
-                                                        <img src="../assets/images/store_img_4.png" class="s_d_img">
+                                                        <img src="assets/images/store_img_4.png" class="s_d_img">
                                                         <i class="ion-ios-heart-outline pin-to-save pin_active" data-toggle="tooltip" data-placement="bottom" title="Bookmark"></i> 
                                                     </div>
                                                     <div class="s_d_content">
@@ -261,7 +261,7 @@
                                             <div class="col-xs-12 col-sm-6 col-md-3 ">
                                                 <div class="Store_details_list">
                                                     <div class="s_d_img_box">
-                                                        <!-- <img src="../assets/images/store_img_1.png" class="s_d_img"> -->
+                                                        <!-- <img src="assets/images/store_img_1.png" class="s_d_img"> -->
                                                         <p class="cus-logo-text">Jayacharndra Angadi</p>
                                                         <i class="ion-ios-heart-outline pin-to-save" data-toggle="tooltip" data-placement="bottom" title="Bookmark"></i> 
                                                     </div>
@@ -281,7 +281,7 @@
                                             <div class="col-xs-12 col-sm-6 col-md-3 ">
                                                 <div class="Store_details_list">
                                                     <div class="s_d_img_box">
-                                                        <img src="../assets/images/store_img_2.png" class="s_d_img">
+                                                        <img src="assets/images/store_img_2.png" class="s_d_img">
                                                         <i class="ion-ios-heart-outline pin-to-save" data-toggle="tooltip" data-placement="bottom" title="Bookmark"></i> 
                                                     </div>
                                                     <div class="s_d_content">
@@ -300,7 +300,7 @@
                                             <div class="col-xs-12 col-sm-6 col-md-3 ">
                                                 <div class="Store_details_list">
                                                     <div class="s_d_img_box">
-                                                        <img src="../assets/images/store_img_3.png" class="s_d_img">
+                                                        <img src="assets/images/store_img_3.png" class="s_d_img">
                                                         <i class="ion-ios-heart-outline pin-to-save" data-toggle="tooltip" data-placement="bottom" title="Bookmark"></i> 
                                                     </div>
                                                     <div class="s_d_content">
@@ -328,7 +328,7 @@
                                             <div class="col-xs-12 col-sm-6 col-md-3 ">
                                                 <div class="Store_details_list">
                                                     <div class="s_d_img_box">
-                                                        <!-- <img src="../assets/images/store_img_1.png" class="s_d_img"> -->
+                                                        <!-- <img src="assets/images/store_img_1.png" class="s_d_img"> -->
                                                         <p class="cus-logo-text">Saravana stores & Provisions</p>
                                                         <i class="ion-ios-heart-outline pin-to-save" data-toggle="tooltip" data-placement="bottom" title="Bookmark"></i> 
                                                     </div>
@@ -348,7 +348,7 @@
                                             <div class="col-xs-12 col-sm-6 col-md-3 ">
                                                 <div class="Store_details_list">
                                                     <div class="s_d_img_box">
-                                                        <img src="../assets/images/restaurants_img_1.png" class="s_d_img">
+                                                        <img src="assets/images/restaurants_img_1.png" class="s_d_img">
                                                         <i class="ion-ios-heart-outline pin-to-save" data-toggle="tooltip" data-placement="bottom" title="Bookmark"></i> 
                                                     </div>
                                                     <div class="s_d_content">
@@ -367,7 +367,7 @@
                                             <div class="col-xs-12 col-sm-6 col-md-3 ">
                                                 <div class="Store_details_list">
                                                     <div class="s_d_img_box">
-                                                        <img src="../assets/images/restaurants_img_2.png" class="s_d_img">
+                                                        <img src="assets/images/restaurants_img_2.png" class="s_d_img">
                                                         <i class="ion-ios-heart-outline pin-to-save pin_active" data-toggle="tooltip" data-placement="bottom" title="Bookmark"></i> 
                                                     </div>
                                                     <div class="s_d_content">
@@ -395,7 +395,7 @@
                                             <div class="col-xs-12 col-sm-6 col-md-3 ">
                                                 <div class="Store_details_list">
                                                     <div class="s_d_img_box">
-                                                        <!-- <img src="../assets/images/store_img_1.png" class="s_d_img"> -->
+                                                        <!-- <img src="assets/images/store_img_1.png" class="s_d_img"> -->
                                                         <p class="cus-logo-text">Saravana stores & Provisions</p>
                                                         <i class="ion-ios-heart-outline pin-to-save" data-toggle="tooltip" data-placement="bottom" title="Bookmark"></i> 
                                                     </div>
@@ -415,7 +415,7 @@
                                             <div class="col-xs-12 col-sm-6 col-md-3 ">
                                                 <div class="Store_details_list">
                                                     <div class="s_d_img_box">
-                                                        <img src="../assets/images/farms_img_1.png" class="s_d_img">
+                                                        <img src="assets/images/farms_img_1.png" class="s_d_img">
                                                         <i class="ion-ios-heart-outline pin-to-save" data-toggle="tooltip" data-placement="bottom" title="Bookmark"></i> 
                                                     </div>
                                                     <div class="s_d_content">
@@ -434,7 +434,7 @@
                                             <div class="col-xs-12 col-sm-6 col-md-3 ">
                                                 <div class="Store_details_list">
                                                     <div class="s_d_img_box">
-                                                        <img src="../assets/images/farms_img_2.png" class="s_d_img">
+                                                        <img src="assets/images/farms_img_2.png" class="s_d_img">
                                                         <i class="ion-ios-heart-outline pin-to-save pin_active" data-toggle="tooltip" data-placement="bottom" title="Bookmark"></i> 
                                                     </div>
                                                     <div class="s_d_content">
@@ -472,7 +472,7 @@
                                                                 <h2>Have farms near you ?</h2>
                                                                 <span>Tell us and get added in Grofoo soon.</span>
                                                                 <div class="request_box">
-                                                                    <img src="../assets/images/header_logo.png" class="s_f_r_logo">
+                                                                    <img src="assets/images/header_logo.png" class="s_f_r_logo">
                                                                     <button class="btn s_r_f_add_now" data-target="#add_stores" data-toggle="modal">Add Now</button>
                                                                 </div>
                                                             </div>
@@ -559,7 +559,7 @@
 
                         <div class="s_r_f_sucess_msg_box" id="s_r_f_sucess_msg_box">
                             <div class="s_r_f_sucess_content">
-                                    <img src="../assets/images/header_logo.png" class="srf_logo_img">
+                                    <img src="assets/images/header_logo.png" class="srf_logo_img">
                                     <h2 class="successfully_title"> Submitted Successfully</h2>
                                     <span>Your form has been received and is being processed. You should receive a confirmation email. </span>  
                             </div>
@@ -574,13 +574,13 @@
         </div><!-- modal-content -->
     </div><!-- modal-dialog -->
 
-    <script type="text/javascript" src="../assets/js/jquery-2.1.1.js"></script>
-    <script type="text/javascript" src="../assets/js/jquery.validate.min.js"></script>
-    <script type="text/javascript" src="../assets/js/bootstrap.min.js"></script>
-    <script type="text/javascript" src="../assets/js/plugins.js"></script>
-    <script type="text/javascript" src="../assets/js/validator.js"></script>
-    <script type="text/javascript" src="../assets/js/custom.js"></script>
-    <script type="text/javascript" src="../assets/js/bloodhound.js"></script>
+    <script type="text/javascript" src="assets/js/jquery-2.1.1.js"></script>
+    <script type="text/javascript" src="assets/js/jquery.validate.min.js"></script>
+    <script type="text/javascript" src="assets/js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="assets/js/plugins.js"></script>
+    <script type="text/javascript" src="assets/js/validator.js"></script>
+    <script type="text/javascript" src="assets/js/custom.js"></script>
+    <script type="text/javascript" src="assets/js/bloodhound.js"></script>
 </body>
 
 </html>
