Updated assests path in html files

--- a/forget_password.html
+++ b/forget_password.html
@@ -5,18 +5,18 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <title>Grofoo - Forget Password</title>
-    <link rel="icon" href="../assets/images/favicon.png" type="image/png" sizes="16x16">
+    <link rel="icon" href="assets/images/favicon.png" type="image/png" sizes="16x16">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <meta name="description" content="Farmcon">
 
-    <link href="../assets/css/bootstrap.min.css" rel="stylesheet" type="text/css" media="all" />
+    <link href="assets/css/bootstrap.min.css" rel="stylesheet" type="text/css" media="all" />
     <link href="https://fonts.googleapis.com/css?family=Nunito:400,700%7CRoboto:300,400,500%7CMuli:300,400" rel="stylesheet">
-    <link rel="stylesheet" href="../assets/css/animate.css">
-    <link rel="stylesheet" href="../assets/css/owl.carousel.css">
-    <link rel="stylesheet" href="../assets/css/owl.theme.css">
-    <link rel="stylesheet" href="../assets/css/magnific-popup.css">
-    <link rel="stylesheet" href="../assets/css/ionicons.min.css">
-    <link href="../assets/css/style.css" rel="stylesheet" type="text/css" media="all" />
+    <link rel="stylesheet" href="assets/css/animate.css">
+    <link rel="stylesheet" href="assets/css/owl.carousel.css">
+    <link rel="stylesheet" href="assets/css/owl.theme.css">
+    <link rel="stylesheet" href="assets/css/magnific-popup.css">
+    <link rel="stylesheet" href="assets/css/ionicons.min.css">
+    <link href="assets/css/style.css" rel="stylesheet" type="text/css" media="all" />
 
 </head>
 
@@ -52,7 +52,7 @@
                         </div>
                     </li>
                     <a class="navbar-brand" href="index.html">
-                        <img src="../assets/images/header_logo.png" class="logo_c"> </a>
+                        <img src="assets/images/header_logo.png" class="logo_c"> </a>
                 </div>
                 <div class="collapse navbar-collapse navbar-right" id="bs-example-navbar-collapse-1">
                     <ul class="nav navbar-nav ">
@@ -197,7 +197,7 @@
                 </div>
 
                 <!-- <div class="modal-body empty-cart">
-                    <img src="../assets/images/empty_cart.png">
+                    <img src="assets/images/empty_cart.png">
                     <h1>No items in your cart</h1>
                     <p>Your favourite items are just a click away</p>
                     <button class="btn cart-btn">Start Shopping</button>
@@ -238,7 +238,7 @@
                         </div>
                         <div class="cart-list-scroll">
                             <div class="cart-list-box">
-                                <img class="cart-img" src="../assets/images/pro_68615.jpg">
+                                <img class="cart-img" src="assets/images/pro_68615.jpg">
                                 <div class="cart-details">
                                     <h1 class="product-name"> Mother's Choice Sweet Mango Chundoo Pickle (Bottle)</h1>
                                     <div class="product-unit">400 g</div>
@@ -256,7 +256,7 @@
                             </div>
 
                             <div class="cart-list-box">
-                                <img class="cart-img" src="../assets/images/pro_68615.jpg">
+                                <img class="cart-img" src="assets/images/pro_68615.jpg">
                                 <div class="cart-details">
                                     <h1 class="product-name"> Mother's Choice Sweet Mango Chundoo Pickle (Bottle)</h1>
                                     <div class="product-unit">400 g</div>
@@ -274,7 +274,7 @@
                             </div>
 
                             <div class="cart-list-box">
-                                <img class="cart-img" src="../assets/images/pro_68615.jpg">
+                                <img class="cart-img" src="assets/images/pro_68615.jpg">
                                 <div class="cart-details">
                                     <h1 class="product-name"> Mother's Choice Sweet Mango Chundoo Pickle (Bottle)</h1>
                                     <div class="product-unit">400 g</div>
@@ -292,7 +292,7 @@
                             </div>
 
                             <div class="cart-list-box">
-                                <img class="cart-img" src="../assets/images/pro_68615.jpg">
+                                <img class="cart-img" src="assets/images/pro_68615.jpg">
                                 <div class="cart-details">
                                     <h1 class="product-name"> Mother's Choice Sweet Mango Chundoo Pickle (Bottle)</h1>
                                     <div class="product-unit">400 g</div>
@@ -349,7 +349,7 @@
 
                         <div class="cart-list-scroll">
                             <div class="cart-list-box">
-                                <img class="cart-img" src="../assets/images/pro_68615.jpg">
+                                <img class="cart-img" src="assets/images/pro_68615.jpg">
                                 <div class="cart-details">
                                     <h1 class="product-name"> Mother's Choice Sweet Mango Chundoo Pickle (Bottle)</h1>
                                     <div class="product-unit">400 g</div>
@@ -367,7 +367,7 @@
                             </div>
 
                             <div class="cart-list-box">
-                                <img class="cart-img" src="../assets/images/pro_68615.jpg">
+                                <img class="cart-img" src="assets/images/pro_68615.jpg">
                                 <div class="cart-details">
                                     <h1 class="product-name"> Mother's Choice Sweet Mango Chundoo Pickle (Bottle)</h1>
                                     <div class="product-unit">400 g</div>
@@ -385,7 +385,7 @@
                             </div>
 
                             <div class="cart-list-box">
-                                <img class="cart-img" src="../assets/images/pro_68615.jpg">
+                                <img class="cart-img" src="assets/images/pro_68615.jpg">
                                 <div class="cart-details">
                                     <h1 class="product-name"> Mother's Choice Sweet Mango Chundoo Pickle (Bottle)</h1>
                                     <div class="product-unit">400 g</div>
@@ -403,7 +403,7 @@
                             </div>
 
                             <div class="cart-list-box">
-                                <img class="cart-img" src="../assets/images/pro_68615.jpg">
+                                <img class="cart-img" src="assets/images/pro_68615.jpg">
                                 <div class="cart-details">
                                     <h1 class="product-name"> Mother's Choice Sweet Mango Chundoo Pickle (Bottle)</h1>
                                     <div class="product-unit">400 g</div>
@@ -620,7 +620,7 @@
                                                 </div>
                                             </div>
                                             <div class="cart-list-box">
-                                                <img class="cart-img" src="../assets/images/pro_68615.jpg">
+                                                <img class="cart-img" src="assets/images/pro_68615.jpg">
                                                 <div class="cart-details">
                                                     <h1 class="product-name"> Mother's Choice Sweet Mango Chundoo Pickle
                                                         (Bottle)</h1>
@@ -639,7 +639,7 @@
                                             </div>
 
                                             <div class="cart-list-box">
-                                                <img class="cart-img" src="../assets/images/pro_68615.jpg">
+                                                <img class="cart-img" src="assets/images/pro_68615.jpg">
                                                 <div class="cart-details">
                                                     <h1 class="product-name"> Mother's Choice Sweet Mango Chundoo Pickle
                                                         (Bottle)</h1>
@@ -658,7 +658,7 @@
                                             </div>
 
                                             <div class="cart-list-box">
-                                                <img class="cart-img" src="../assets/images/pro_68615.jpg">
+                                                <img class="cart-img" src="assets/images/pro_68615.jpg">
                                                 <div class="cart-details">
                                                     <h1 class="product-name"> Mother's Choice Sweet Mango Chundoo Pickle
                                                         (Bottle)</h1>
@@ -706,7 +706,7 @@
                                                 </div>
                                             </div>
                                             <div class="cart-list-box">
-                                                <img class="cart-img" src="../assets/images/pro_68615.jpg">
+                                                <img class="cart-img" src="assets/images/pro_68615.jpg">
                                                 <div class="cart-details">
                                                     <h1 class="product-name"> Mother's Choice Sweet Mango Chundoo Pickle
                                                         (Bottle)</h1>
@@ -779,7 +779,7 @@
                                         <div class="check-title">Complete Order</div>
                                     </div>
                                     <div class="modal-body complete-order">
-                                        <img src="../assets/images/order_completed.png">
+                                        <img src="assets/images/order_completed.png">
                                         <h1>Complete Successfully</h1>
                                         <p>Your ordering information will be forwarded to your email </p>
                                         <b>example_mail@mail.com</b>
@@ -857,12 +857,12 @@
         </div><!-- modal-content -->
     </div><!-- modal-dialog -->
 
-    <script type="text/javascript" src="../assets/js/jquery-2.1.1.js"></script>
-    <script type="text/javascript" src="../assets/js/jquery.validate.min.js"></script>
-    <script type="text/javascript" src="../assets/js/bootstrap.min.js"></script>
-    <script type="text/javascript" src="../assets/js/plugins.js"></script>
-    <script type="text/javascript" src="../assets/js/validator.js"></script>
-    <script type="text/javascript" src="../assets/js/custom.js"></script>
+    <script type="text/javascript" src="assets/js/jquery-2.1.1.js"></script>
+    <script type="text/javascript" src="assets/js/jquery.validate.min.js"></script>
+    <script type="text/javascript" src="assets/js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="assets/js/plugins.js"></script>
+    <script type="text/javascript" src="assets/js/validator.js"></script>
+    <script type="text/javascript" src="assets/js/custom.js"></script>
 </body>
 
 </html>
