--- a/index.html
+++ b/index.html
@@ -4,19 +4,19 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <link rel="icon" href="../assets/images/favicon.png" type="image/png" sizes="16x16">
+    <link rel="icon" href="assets/images/favicon.png" type="image/png" sizes="16x16">
     <title>Grofoo - Home</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <meta name="description" content="Grofoo">
     <!-- <meta http-equiv="refresh" content="0; url=https://ashish0038.github.io/grofoo/dashboard/index.html"> -->
-    <link href="../assets/css/bootstrap.min.css" rel="stylesheet" type="text/css" media="all" />
+    <link href="assets/css/bootstrap.min.css" rel="stylesheet" type="text/css" media="all" />
     <link href="https://fonts.googleapis.com/css?family=Nunito:400,700%7CRoboto:300,400,500%7CMuli:300,400" rel="stylesheet">
-    <link rel="stylesheet" href="../assets/css/animate.css">
-    <link rel="stylesheet" href="../assets/css/owl.carousel.css">
-    <link rel="stylesheet" href="../assets/css/owl.theme.css">
-    <link rel="stylesheet" href="../assets/css/magnific-popup.css">
-    <link rel="stylesheet" href="../assets/css/ionicons.min.css">
-    <link href="../assets/css/style.css" rel="stylesheet" type="text/css" media="all" />
+    <link rel="stylesheet" href="assets/css/animate.css">
+    <link rel="stylesheet" href="assets/css/owl.carousel.css">
+    <link rel="stylesheet" href="assets/css/owl.theme.css">
+    <link rel="stylesheet" href="assets/css/magnific-popup.css">
+    <link rel="stylesheet" href="assets/css/ionicons.min.css">
+    <link href="assets/css/style.css" rel="stylesheet" type="text/css" media="all" />
 </head>
 
 <body>
@@ -46,7 +46,7 @@
                         </div>
                     </li>
                     <a class="navbar-brand" href="index.html">
-                        <img src="../assets/images/header_logo.png" class="logo_c">
+                        <img src="assets/images/header_logo.png" class="logo_c">
                     </a>
                 </div>
                 <div class="collapse navbar-collapse navbar-right" id="bs-example-navbar-collapse-1">
@@ -118,7 +118,7 @@
                             <div class="col-sm-12 col-md-12 p-0">
                                 <div class="zip-search-box">
                                     <div class="deliver-section text-center">
-                                        <img class="location_logo" src="../assets/images/header_logo.png">
+                                        <img class="location_logo" src="assets/images/header_logo.png">
                                     </div>
                                     <div class="location-selection">
                                         <p class="location_popup_title">Enter your Delivery Address or Zip code</p>
@@ -248,12 +248,12 @@
             </div>
         </div>
     </div>
-    <script type="text/javascript" src="../assets/js/jquery-2.1.1.js"></script>
-    <script type="text/javascript" src="../assets/js/jquery.validate.min.js"></script>
-    <script type="text/javascript" src="../assets/js/bootstrap.min.js"></script>
-    <script type="text/javascript" src="../assets/js/plugins.js"></script>
-    <script type="text/javascript" src="../assets/js/validator.js"></script>
-    <script type="text/javascript" src="../assets/js/custom.js"></script>
+    <script type="text/javascript" src="assets/js/jquery-2.1.1.js"></script>
+    <script type="text/javascript" src="assets/js/jquery.validate.min.js"></script>
+    <script type="text/javascript" src="assets/js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="assets/js/plugins.js"></script>
+    <script type="text/javascript" src="assets/js/validator.js"></script>
+    <script type="text/javascript" src="assets/js/custom.js"></script>
 </body>
 <script type="text/javascript">
 	function validation()
