--- a/search_list_new_grocery_owne.html
+++ b/search_list_new_grocery_owne.html
@@ -92,7 +92,7 @@
                         <span class="icon-bar"></span>
                     </button>
                     <a class="navbar-brand" href="#">
-                        <img src="assets/images/Logo.png" class="logo_c"> </a>
+                        <img src="assets/images/header_logo.png" class="logo_c"> </a>
                 </div>
                 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                     <ul class="nav navbar-nav  navbar-left hidden-sm hidden-md hidden-xs">
@@ -194,7 +194,7 @@
                         </div>
                     </li> -->
                     <a class="navbar-brand" href="index.html">
-                        <img src="assets/images/Logo.png" class="logo_c"> </a>
+                        <img src="assets/images/header_logo.png" class="logo_c"> </a>
                 </div>
                 <div class="collapse navbar-collapse " id="bs-example-navbar-collapse-1">
                     
